k8s/api/api.nginx.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: api-service
              servicePort: 80
