k8s/api/api.traefik.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: api-service
              servicePort: 80
